--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- 侧边栏隐藏时显示的图标容器，初始隐藏 -->
-    <button id="showSidebarIconContainer">
+    <button id="showSidebarIconContainer" aria-label="显示侧边栏" title="显示侧边栏">
         <i class="fas fa-chevron-circle-right"></i> <!-- 菜单图标 -->
     </button>
 
