add new features to the web application fix bugs in the script and styles modify the HTML structure

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 
                 <!-- New Overall Set Quiz Summary Display -->
                 <div class="set-quiz-summary-display" id="set-quiz-summary-display">
-                    <h3>套题总正确率:</h3>
+                    <div>套题总评论:</div>
                     <span class="overall-score-percentage">0% (0/0)</span>
                 </div>
             </div>
