update SSR documentation and add favicon add favicon and update index.html delete some unused files

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>互动测验页面</title>
+    <title>互动测验</title>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Load custom styles -->
@@ -21,7 +21,7 @@
         <!-- Sidebar Navigation -->
         <div id="sidebar" class="sidebar">
             <div class="sidebar-header">
-                <h2>测验导航 <i id="hideSidebarIcon" class="fas fa-chevron-circle-left"></i></h2>
+                <h2>导航<i id="hideSidebarIcon" class="fas fa-chevron-circle-left"></i></h2>
                 <!-- New Custom Quiz Mode Dropdown -->
                 <span class="sidebar-control-label">作题模式:</span>
                 <div class="custom-dropdown" id="custom-quiz-mode-filter">
